Fix text overflow in  bar chart
https://bugzilla.redhat.com/show_bug.cgi?id=1732678

--- a/frontend/public/components/graphs/_graphs.scss
+++ b/frontend/public/components/graphs/_graphs.scss
@@ -1,3 +1,10 @@
+.graph-bar__label {
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap; 
+}
+
 .graph-empty-state {
   background: #f5f5f5;
 }
